--- a/src/app/panel/components/list-clients/list-clients.component.html
+++ b/src/app/panel/components/list-clients/list-clients.component.html
@@ -1,1 +1,33 @@
-<p>list-clients works!</p>
+<div class="col-lg-12">
+  <h3>{{page_title}}</h3>
+  <hr/>
+  <table class="table table-hover table-responsive">
+    <thead class="thead-default">
+      <tr>
+        <td>REFERIDO DE</td>
+        <td>NOMBRE</td>
+        <td>EMAIL</td>
+        <td>FECHA NACIMIENTO</td>
+        <td>DOCUMENTO</td>
+        <td>DIRECCION</td>
+        <td>CIUDAD</td>
+        <td>TELEFONO</td>
+        <td>CELULAR</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor = "let client of clients">
+        <td>{{client.referred_from}}</td>
+        <td>{{client.client_name}}</td>
+        <td>{{client.email_client}}</td>
+        <td>{{client.birth_client}}</td>
+        <td>{{client.client_doc}}</td>
+        <td>{{client.address}}</td>
+        <td>{{client.city}}</td>
+        <td>{{client.phone}}</td>
+        <td>{{client.cell_phone}}</td>
+      </tr>
+    </tbody>
+  </table>
+
+</div>
