tipos de polizas

--- a/src/app/panel/components/main/main.component.html
+++ b/src/app/panel/components/main/main.component.html
@@ -6,6 +6,8 @@
     [routerLink]="['listar-clientes']" >Lista Clientes</a>
     <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false"
     [routerLink]="['crear-cliente']">Crear Cliente</a>
+    <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false"
+    [routerLink]="['listar-vencer']">Listar proximas a vencer</a>
   </div>
 
   <hr/>
