--- a/src/app/panel/components/motor/motor.component.html
+++ b/src/app/panel/components/motor/motor.component.html
@@ -4,7 +4,7 @@
       <h3>{{page_title}}</h3>
     </div>
     <div class="col-lg-3">
-      <button type="button" class="btn btn-primary" [routerLink]= "['/panel/crear-seguro', clientId]" >CREAR POLIZA</button>
+      <button type="button" class="btn btn-primary" [routerLink]= "['/panel/crear-seguro', clientId, type]" >CREAR POLIZA</button>
     </div>
   </div>
   <hr/>
